--- a/src/styles/tag.module.css
+++ b/src/styles/tag.module.css
@@ -5,6 +5,7 @@
     display: inline-block;
     cursor: pointer;
     border-radius: 20px;
-    padding: 5px;
+    padding-left: 4px;
+    padding-right: 4px;
     margin: 2px;
 }
